--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "lightning-charge-client": "^0.1.10",
     "nodemon": "^1.18.11",
+    "qrcode.react": "^0.9.3",
     "query-string": "^6.4.2",
     "querystring": "^0.2.0",
     "react": "^16.8.6",
